Removed some warnings.